# llm_misc

./: .gitignore  README.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
llm_misc/: completion.py
llm_misc/tools/: __init__.py
llm_misc/ui/: rich_chat.py
src/llm_misc/: agent.py  test_completion.py
src/llm_misc/resources/: __init__.py  chromadb.py  config.py
src/llm_misc/tools/: base.py
