[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_misc"
version = "0.1.0"
authors = [
    {name = "D. Evans", email = "dylan@dje.me"}
]
description = "Misc LLM code"
dependencies = [
    "openai",
    "pydantic",
    "rich",
    "panel",
    "newspaper3",
]

[tools.setuptools]
packages = ["llm_misc"]
